style.css
body {
    background-color:whitesmoke;
    display: flex;
    justify-content: center;
    font-family: Arial, Helvetica, sans-serif;
}

.app {
    width: 390px;
    background-color: white;
    min-height: 100vh;
}

.title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
    border-bottom-style: solid;
    border-width: 0.1px;
    padding-top: 2px;
    padding-left: 10px;
    padding-right: 10px;
}

.title h1 {
    font-size: 24px;
}

.input-search-bar {
    padding: 6px 10px;
    border-style: solid;
    border: 1px solid #d6d6d6;
    font-size: 13px;
    border-radius: 10px;
    background-color: #f3f3f3;
}

.buttons-on-top {
    margin: 2px;
    padding: 5px;
    display: flex;
}

.stories {
    gap: 30px;
    display: flex;
    flex-direction: row;
    padding: 20px;
}

.user-story {
    align-items: center;
    display: flex;
    flex-direction: column;
}

.user-story p {
    margin: 3px 0 0;
    font-size: 14px;
}

.otheruser-pfp {
    width: 60px;
    height: 60px;
    object-fit:cover;
    border-radius: 100px;
    border: 1px solid #d8d8d8;
    box-shadow: 0 0 10px -7px rgba(0, 0, 0, 0.8);
}

.post {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0 24px;
}

.posting-header {
    display: flex;
    flex-direction: row;
    justify-content: left;
}

.posted-image {
    width: 100%;
    height: 350px;
    box-shadow: 8px 5px 15px 0px rgba(0, 0, 0, 0.08);
    border-radius: 8px;
    object-fit: cover;
}

.buttons {
    display: flex;
    padding: 10px;
    gap: 2px;
}

.poster-row {
    display: flex;
    align-items: center;
    flex-direction: row;
    gap: 2px;
    padding: 3px;
}

.user-poster {
    width: 50px;
    height: 50px;
    object-fit: cover;
    border-radius: 100px;
    margin-bottom: 2px;
    gap: 5px;
}

.poster-name {
    font-weight: bold;
}

.poster p {
    margin: 5px;
}

.comment-section-bundle {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    padding-bottom: 20px;
    padding-left: 24px;
}

.comment {
    display: flex;
    align-items: row;
    flex-direction: row;
    gap: 2px;
    padding: 3px;
}

.comment-image {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    object-fit: cover;
}

.add-comment {
    margin-top: 10px;
    background-color:blue;
    color: white;
    margin-left: 50px;
    padding-left: 10px;
    padding-right: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: center;
    border-style: solid;
    border-width: 1px;
    border-radius: 10px;
}

